Fixed background on iOS

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -19,8 +19,8 @@ body {
 .App:before {
   content:"";
   position:fixed;
-  top:-100%; left:-100%;
-  width:200%; height:200%;
+  width:100%;
+  height:100%;
   background-color:#33d6ff;
   background:-webkit-gradient(130deg, #7847ff, #4164ff, #33d6ff);
   background:-moz-linear-gradient(130deg, #7847ff, #4164ff, #33d6ff);
@@ -140,19 +140,19 @@ body {
 }
 
 @-webkit-keyframes gra {
-  0%{transform:translate(20%, 10%)}
-  50%{transform:translate(40%, 50%)}
-  100%{transform:translate(20%, 10%)}
+  0%{transform:scale(1)}
+  50%{transform:scale(2)}
+  100%{transform:scale(1)}
 }
 @-moz-keyframes gra {
-  0%{transform:translate(10%, 0%)}
-  50%{transform:translate(30%, 50%)}
-  100%{transform:translate(10%, 0%)}
+  0%{transform:scale(1)}
+  50%{transform:scale(2)}
+  100%{transform:scale(1)}
 }
 @keyframes gra { 
-  0%{transform:translate(10%, 0%)}
-  50%{transform:translate(30%, 50%)}
-  100%{transform:translate(10%, 0%)}
+  0%{transform:scale(1)}
+  50%{transform:scale(2)}
+  100%{transform:scale(1)}
 }
 @keyframes pulseLeft {
   0% {
